--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <h3 class="web-tilte flex_justify_center m-down_50"> further more </h3>
         </p>
         <p class="web-tilte flex_justify_center m-down_50 align_center ">
-            <a href="#" class="link_tele">
+            <a href="https://t.me/+8z1rRAAJB-85MjRl" class="link_tele">
             <i class="fa-brands fa-telegram fa-2xl"></i>
         </a>
             join the free telegram channels.
